--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,1 +1,136 @@
+#container {
+  margin: auto;
+  width: 90%;
+  height: 100%;
+  background-color: white;
+  font-family: sans-serif;
+  line-height: 22px;
+  color: #333;
+}
 
+#alineation {
+  margin-left: 10px;
+}
+
+#logo {
+  margin-left: 10px;
+  padding-top: 10px;
+}
+
+#name {
+  margin-left: 10px;
+  margin-top: 10%;
+  margin-bottom: 5%;
+  float: left;
+  margin-right: 10px;
+}
+
+#photo {
+  float: right;
+  margin-left: 50px;
+}
+
+#navigation_bar {
+  width: 100%;
+  background-color: #333;
+  display: inline-block;
+}
+
+nav {
+  margin-top: -10px;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+}
+
+nav a:hover {
+  color: #9dcc9f;
+}
+
+ul {
+  display: inline-block;
+  padding-left: 14px;
+  color: white;
+}
+
+/*About description Start*/
+
+#text_presentation {
+  margin-left: 14px;
+  margin-right: 20px;
+  padding-top: 5px;
+  padding-bottom: 0;
+  width: 70%;
+  float: left;
+}
+
+aside {
+  display: inline-block;
+  margin-left: 10px;
+}
+
+/*Education description Start*/
+
+table {
+  border: 1px solid #ccc;
+  margin-top: 20px;
+  width: 100%;
+  font-size: 14px;
+}
+
+#form_description {
+  margin-top: 10px;
+  font-size: 14px;
+}
+
+/*Experience description Starts*/
+
+#video_container {
+  max-width: 740px;
+  min-width: 430px;
+  right: auto;
+}
+
+#video_title {
+  padding-bottom: -10px;
+}
+
+video {
+  width: 80%;
+  border: 1px solid #ccc;
+  margin-top: -16px;
+}
+
+audio {
+  margin-top: -16px;
+  border: 1px solid #ccc;
+}
+
+/*Footer Start HERE*/
+
+footer {
+  padding-top: 0px;
+  background-color: #333;
+  width: 100%;
+  height: 110px;
+}
+
+footer p {
+  width: 100%;
+  text-align: center;
+  font-size: 12px;
+  color: #ccc;
+}
+
+#footer_content {
+  margin: auto;
+  top: 20px;
+  width: 258px;
+  position: relative;
+}
+
+#footer_content img {
+  padding-left: 5px;
+}
